updated test pipeline env
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/sftp.yaml
+++ b/sftp.yaml
@@ -50,18 +50,18 @@ pipeline:
       rm -f ${{targets.contextdir}}/etc/ssh/ssh_host_*key*
 
 test:
+  environment:
+    contents:
+      packages:
+        - wait-for-it
+        - sshpass
   pipeline:
-    - name: Verify OpenSSH installation
+    - name: "Verify SFTP entrypoint"
       runs: |
-        ssh -V 2>&1 | grep -q "OpenSSH"
-    - name: Verify SFTP entrypoint
-      runs: |
-        apk add wait-for-it
         groupadd users || true  # This creates the group if it doesn't exist
         /entrypoint foo:pass:::upload & wait-for-it localhost:22
         netstat -tan | grep ':22'
 
-        apk add sshpass
         echo "test file" > /tmp/test.txt
         sshpass -p "pass" sftp -o StrictHostKeyChecking=no -P 22 foo@127.0.0.1 <<EOF
           put /tmp/test.txt upload/test.txt
