libselinux - usrmerge usr/sbin

--- a/libselinux.yaml
+++ b/libselinux.yaml
@@ -49,7 +49,9 @@ pipeline:
           opts: pywrap swigify
       - uses: autoconf/make-install
         with:
-          opts: install-pywrap
+          opts: |
+            install-pywrap \
+            SBINDIR=/usr/bin
 
 subpackages:
   - name: ${{package.name}}-dev
