Add the pkgconf test to nfs-utils

--- a/nfs-utils.yaml
+++ b/nfs-utils.yaml
@@ -1,7 +1,7 @@
 package:
   name: nfs-utils
   version: 2.8.2
-  epoch: 1
+  epoch: 2
   description: kernel-mode NFS
   copyright:
     - license: GPL-2.0-only
@@ -65,6 +65,9 @@ subpackages:
     description: "headers for ${{package.name}}"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-static
     description: "${{package.name}} static library"
