chore(dotnet-bootstrap-9): Bump to 9.0.2
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/dotnet-bootstrap-9.yaml
+++ b/dotnet-bootstrap-9.yaml
@@ -1,6 +1,7 @@
+#nolint:git-checkout-must-use-github-updates
 package:
   name: dotnet-bootstrap-9
-  version: 9.0.0
+  version: 9.0.200
   epoch: 0
   description: ".NET 9 SDK Bootstrap"
   copyright:
@@ -11,6 +12,12 @@ package:
   dependencies:
     runtime:
       - icu
+
+var-transforms:
+  - from: ${{package.version}}
+    match: '\.(?:(\d+?)00|(\d+))$'
+    replace: ".$1$2"
+    to: mangled-package-version
 
 environment:
   contents:
@@ -34,8 +41,8 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/dotnet/dotnet
-      tag: v${{package.version}}
-      expected-commit: a2bc464e40415d625118f38fbb0556d1803783ff
+      tag: v${{vars.mangled-package-version}}
+      expected-commit: c4e5fd73fe5d8c004bf46cb4f1ded77ca8124b1a
       destination: /home/build/src
 
   - working-directory: /home/build/src
@@ -53,9 +60,6 @@ pipeline:
   - uses: strip
 
 update:
-  enabled: false
-  github:
-    identifier: dotnet/dotnet
-    strip-prefix: v
-    use-tag: true
-    tag-filter: "v9"
+  enabled: true
+  release-monitor:
+    identifier: 141853
