--- a/berg.yaml
+++ b/berg.yaml
@@ -21,6 +21,8 @@ pipeline:
       repository: https://codeberg.org/RobWalt/codeberg-cli/
       tag: v${{package.version}}
       expected-commit: f734cc9d7cb1400d7c2acac9e8aa7c761a2e629e
+      cherry-picks: |
+        main/888b2d23503e7dbb9323d40b6de0c3e6fa401292: revert rust 2024 edition
 
   - uses: rust/cargobump
 
