Run script to add new deps and EPOCH bump

--- a/cifs-utils.yaml
+++ b/cifs-utils.yaml
@@ -1,10 +1,14 @@
 package:
   name: cifs-utils
   version: "7.2"
-  epoch: 0
+  epoch: 20
   description: CIFS filesystem user-space tools
   copyright:
     - license: GPL-3.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -43,6 +47,8 @@ subpackages:
     dependencies:
       runtime:
         - cifs-utils
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "cifs-utils-doc"
     description: "cifs-utils documentation"
@@ -51,6 +57,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
