--- a/cilium-1.17.yaml
+++ b/cilium-1.17.yaml
@@ -1,7 +1,7 @@
 package:
   name: cilium-1.17
   version: "1.17.1"
-  epoch: 2
+  epoch: 20
   description: Cilium is a networking, observability, and security solution with an eBPF-based dataplane
   copyright:
     - license: Apache-2.0
@@ -23,6 +23,8 @@ package:
       - iptables
       - kmod
       - llvm17
+      - merged-sbin
+      - wolfi-baselayout
     provides:
       - cilium=${{package.full-version}}
 
@@ -97,6 +99,9 @@ subpackages:
     dependencies:
       provides:
         - cilium-container-init=${{package.full-version}}
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -110,6 +115,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}-container-init
+        - merged-sbin
+        - wolfi-baselayout
       provides:
         - cilium-container-init-compat=${{package.full-version}}
     pipeline:
@@ -124,6 +131,8 @@ subpackages:
     dependencies:
       runtime:
         - iptables
+        - merged-sbin
+        - wolfi-baselayout
       provides:
         - cilium-iptables=${{package.full-version}}
     pipeline:
@@ -140,6 +149,8 @@ subpackages:
     dependencies:
       runtime:
         - gops
+        - merged-sbin
+        - wolfi-baselayout
       provides:
         - cilium-operator-generic=${{package.full-version}}
     pipeline:
@@ -154,6 +165,8 @@ subpackages:
     dependencies:
       runtime:
         - gops
+        - merged-sbin
+        - wolfi-baselayout
       provides:
         - cilium-operator-aws=${{package.full-version}}
     pipeline:
@@ -168,6 +181,9 @@ subpackages:
     dependencies:
       provides:
         - cilium-hubble-relay=${{package.full-version}}
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd /home/build/hubble-relay
