--- a/cryptsetup.yaml
+++ b/cryptsetup.yaml
@@ -2,10 +2,14 @@
 package:
   name: cryptsetup
   version: 2.7.5
-  epoch: 3
+  epoch: 20
   description: Userspace setup tool for transparent encryption of block devices using the Linux 2.6 cryptoapi
   copyright:
     - license: GPL-2.0-or-later WITH cryptsetup-OpenSSL-exception
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -69,8 +73,10 @@ subpackages:
         - cryptsetup
         - json-c-dev
         - lvm2-dev
+        - merged-sbin
         - openssl-dev
         - util-linux-dev
+        - wolfi-baselayout
     description: cryptsetup dev
 
   - name: cryptsetup-doc
@@ -80,6 +86,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
