--- a/efs-utils.yaml
+++ b/efs-utils.yaml
@@ -1,7 +1,7 @@
 package:
   name: efs-utils
   version: 2.2.0
-  epoch: 1
+  epoch: 20
   description: Utilities for Amazon Elastic File System (EFS)
   copyright:
     - license: MIT
@@ -9,12 +9,14 @@ package:
     # Ref: https://github.com/aws/efs-utils/blob/master/amazon-efs-utils.spec#L49-L58
     runtime:
       - busybox
+      - merged-sbin
       - nfs-utils
       - openssl
       - py${{vars.py-version}}-botocore
       - stunnel
       - systemd
       - util-linux
+      - wolfi-baselayout
 
 vars:
   # pick a version of python so we can add that version and boto as a dep.
