--- a/net-tools.yaml
+++ b/net-tools.yaml
@@ -1,10 +1,14 @@
 package:
   name: net-tools
   version: 2.10
-  epoch: 5
+  epoch: 20
   description: "Linux networking base tools"
   copyright:
     - license: GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -96,6 +100,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "net-tools-dbg"
     description: "net-tools Debug Symbols"
@@ -103,7 +111,9 @@ subpackages:
       - uses: split/debug
     dependencies:
       runtime:
+        - merged-sbin
         - net-tools
+        - wolfi-baselayout
 
   - name: mii-tool
     pipeline:
@@ -114,6 +124,10 @@ subpackages:
       pipeline:
         - runs: |
             mii-tool --version
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
