--- a/nfs-utils.yaml
+++ b/nfs-utils.yaml
@@ -1,14 +1,16 @@
 package:
   name: nfs-utils
   version: 2.8.2
-  epoch: 2
+  epoch: 20
   description: kernel-mode NFS
   copyright:
     - license: GPL-2.0-only
   dependencies:
     runtime:
       - busybox
+      - merged-sbin
       - python3
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -65,6 +67,10 @@ pipeline:
 subpackages:
   - name: ${{package.name}}-dev
     description: "headers for ${{package.name}}"
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - uses: split/dev
     test:
@@ -75,6 +81,10 @@ subpackages:
     description: "${{package.name}} static library"
     pipeline:
       - uses: split/static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-doc
     description: "${{package.name}} manpages"
@@ -83,11 +93,19 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-db
     description: "${{package.name}} debug symbols"
     pipeline:
       - uses: split/debug
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: rpcgen
     description: Remote Procedure Call (RPC) protocol compiler
@@ -100,6 +118,10 @@ subpackages:
         - runs: |
             rpcgen --version
             rpcgen --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
