--- a/openrc.yaml
+++ b/openrc.yaml
@@ -2,10 +2,14 @@
 package:
   name: openrc
   version: "0.60"
-  epoch: 0
+  epoch: 20
   description: OpenRC is a dependency-based init system that works with the system provided init program, normally /sbin/init.
   copyright:
     - license: BSD-2-Clause
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -53,6 +57,10 @@ subpackages:
   - name: openrc-dbg
     pipeline:
       - uses: split/debug
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-doc
     description: openrc manpages
@@ -65,6 +73,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-tools
     pipeline:
@@ -72,16 +84,26 @@ subpackages:
           echo "target: ${{targets.destdir}}"
           mkdir -p "${{targets.subpkgdir}}"/usr/bin/
           mv "${{targets.destdir}}"/usr/bin/deptree2dot "${{targets.subpkgdir}}"/usr/bin/
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-static
     description: openrc static
     pipeline:
       - uses: split/static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-dev
     dependencies:
       runtime:
+        - merged-sbin
         - openrc
+        - wolfi-baselayout
     pipeline:
       - uses: split/dev
     test:
@@ -96,6 +118,10 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/etc/conf.d
           mv "${{targets.destdir}}"/etc/init.d/agetty "${{targets.subpkgdir}}"/etc/init.d/agetty
           mv "${{targets.destdir}}"/etc/conf.d/agetty "${{targets.subpkgdir}}"/etc/conf.d/agetty
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-bash-completion
     description: bash completion for openrc
@@ -103,6 +129,10 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/share/bash-completion"
           mv "${{targets.destdir}}"/usr/share/bash-completion/completions "${{targets.subpkgdir}}"/usr/share/bash-completion/completions
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: openrc-zsh-completion
     description: zsh completion for openrc
@@ -110,6 +140,10 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/share/zsh"
           mv "${{targets.destdir}}/usr/share/zsh/site-functions" "${{targets.subpkgdir}}/usr/share/zsh/site-functions"
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
