--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -1,11 +1,15 @@
 package:
   name: util-linux
   version: "2.40.4"
-  epoch: 1
+  epoch: 20
   description: Random collection of Linux utilities
   copyright:
     - license: |-
         GPL-3.0-or-later AND GPL-2.0-or-later AND GPL-2.0-only AND GPL-1.0-only AND LGPL-2.1-or-later AND BSD-1-Clause AND BSD-3-Clause AND BSD-4-Clause-UC AND MIT AND CC-PDDC
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -103,7 +107,9 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
+        - merged-sbin
         - util-linux
+        - wolfi-baselayout
     description: util-linux dev
     test:
       pipeline:
@@ -116,6 +122,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - range: libs
     name: ${{range.key}}
@@ -130,6 +140,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: ${{range.key}}
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - range: bins
     name: ${{range.key}}
@@ -142,12 +156,18 @@ subpackages:
               mv ${{targets.destdir}}/$i/${{range.key}} ${{targets.subpkgdir}}/$i/${{range.key}}
             fi
           done
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: util-linux-login
     description: Login utils from util-linux package newgrp last lastb login lslogins nologin su sulogin
     dependencies:
       runtime:
+        - merged-sbin
         - runuser
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/pam.d
@@ -382,6 +402,10 @@ subpackages:
             rtcwake --help
             uuidd --version
             uuidd --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
