--- a/apk-tools.yaml
+++ b/apk-tools.yaml
@@ -1,13 +1,15 @@
 package:
   name: apk-tools
   version: 2.14.4
-  epoch: 3
+  epoch: 20
   description: "apk-tools (Wolfi package manager)"
   copyright:
     - license: GPL-2.0-only
   dependencies:
     runtime:
       - ca-certificates-bundle
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -54,6 +56,8 @@ subpackages:
     dependencies:
       runtime:
         - apk-tools
+        - merged-sbin
+        - wolfi-baselayout
     test:
       pipeline:
         - uses: test/pkgconf
@@ -68,6 +72,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "lua5.3-apk"
     description: "Lua module for libapk"
@@ -80,6 +88,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 test:
   environment:
