--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -1,7 +1,7 @@
 package:
   name: dhclient
   version: 4.4.3
-  epoch: 2
+  epoch: 20
   description: dhcp client program
   copyright:
     - license: BSD-2-Clause
@@ -9,6 +9,8 @@ package:
     runtime:
       - coreutils
       - iproute2
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
