--- a/e2fsprogs.yaml
+++ b/e2fsprogs.yaml
@@ -1,10 +1,14 @@
 package:
   name: e2fsprogs
   version: 1.47.2
-  epoch: 0
+  epoch: 20
   description: Standard Ext2/3/4 filesystem utilities
   copyright:
     - license: GPL-2.0-or-later AND LGPL-2.0-or-later AND BSD-3-Clause AND MIT
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -55,6 +59,10 @@ subpackages:
     pipeline:
       - uses: split/static
     description: e2fsprogs static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: e2fsprogs-dev
     pipeline:
@@ -70,8 +78,10 @@ subpackages:
     dependencies:
       runtime:
         - e2fsprogs-libs
-        - util-linux-dev
         - gawk
+        - merged-sbin
+        - util-linux-dev
+        - wolfi-baselayout
     description: e2fsprogs dev
     test:
       pipeline:
@@ -83,6 +93,10 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/lib
           mv ${{targets.destdir}}/usr/lib/libcom_err* ${{targets.subpkgdir}}/usr/lib/
     description: Common error description library
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: e2fsprogs-doc
     pipeline:
@@ -91,6 +105,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: e2fsprogs-libs
     pipeline:
@@ -103,6 +121,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: e2fsprogs-libs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: e2fsprogs-extra
     description: Ext2/3/4 filesystem extra utilities
@@ -129,6 +151,10 @@ subpackages:
             debugfs help
             e4crypt --version
             e4crypt --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
