--- a/fuse2.yaml
+++ b/fuse2.yaml
@@ -1,10 +1,14 @@
 package:
   name: fuse2
   version: 2.9.9
-  epoch: 2
+  epoch: 20
   description: A library that makes it possible to implement a filesystem in a userspace program.
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -60,6 +64,10 @@ subpackages:
     pipeline:
       - uses: split/static
     description: fuse static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-dev
     pipeline:
@@ -67,6 +75,8 @@ subpackages:
     dependencies:
       runtime:
         - fuse-common
+        - merged-sbin
+        - wolfi-baselayout
     description: fuse dev
     test:
       pipeline:
@@ -79,6 +89,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
