--- a/iptables.yaml
+++ b/iptables.yaml
@@ -1,10 +1,14 @@
 package:
   name: iptables
   version: 1.8.11
-  epoch: 0
+  epoch: 20
   description: Linux kernel firewall, NAT and packet mangling tools
   copyright:
     - license: GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -90,6 +94,10 @@ subpackages:
           runs: |
             getcap /usr/bin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
             getcap /usr/bin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: iptables-doc
     description: iptables documentation
@@ -98,6 +106,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: iptables-dev
     description: iptables development files
@@ -106,6 +118,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: ip6tables
     pipeline:
@@ -143,6 +159,10 @@ subpackages:
             ip6tables-save --version
             ip6tables-translate --version
             ip6tables-translate --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
