--- a/lvm2.yaml
+++ b/lvm2.yaml
@@ -2,10 +2,14 @@
 package:
   name: lvm2
   version: "2.03.31"
-  epoch: 0
+  epoch: 20
   description: Logical Volume Manager 2 utilities
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -77,11 +81,19 @@ subpackages:
     pipeline:
       - uses: split/static
     description: lvm2 static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-static
     pipeline:
       - uses: split/static
     description: lvm2 static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-libs
     pipeline:
@@ -93,6 +105,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-event-libs
     pipeline:
@@ -104,6 +120,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: lvm2-dev
     pipeline:
@@ -114,6 +134,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: lvm2-doc
     pipeline:
@@ -122,6 +146,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper
     pipeline:
@@ -137,6 +165,10 @@ subpackages:
             dmsetup --help
             dmstats --version
             dmstats --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
