--- a/runit.yaml
+++ b/runit.yaml
@@ -1,10 +1,14 @@
 package:
   name: runit
   version: 2.2.0
-  epoch: 1
+  epoch: 20
   description: UNIX init scheme with service supervision
   copyright:
     - license: BSD-3-Clause
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -58,6 +62,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
