--- a/su-exec.yaml
+++ b/su-exec.yaml
@@ -1,10 +1,14 @@
 package:
   name: su-exec
   version: "0.2"
-  epoch: 7
+  epoch: 20
   description: switch user and group id, setgroups and exec
   copyright:
     - license: MIT
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
