--- a/systemd.yaml
+++ b/systemd.yaml
@@ -1,7 +1,7 @@
 package:
   name: systemd
   version: "257.3"
-  epoch: 0
+  epoch: 20
   description: The systemd System and Service Manager
   copyright:
     - license: LGPL-2.1-or-later AND GPL-2.0-or-later
@@ -11,6 +11,8 @@ package:
   dependencies:
     runtime:
       - kmod
+      - merged-sbin
+      - wolfi-baselayout
 
 vars:
   llvm-vers: 19
@@ -108,6 +110,10 @@ subpackages:
         - runs: |
             ${{range.key}} --help
             ${{range.key}} --version
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: systemd-shutdown-standalone
     description: Standalone version of ${{range.key}}
@@ -116,12 +122,18 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd
           mv ${{targets.destdir}}/usr/lib/systemd/systemd-shutdown.standalone ${{targets.subpkgdir}}/usr/lib/systemd/systemd-shutdown
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "systemd-dev"
     description: "headers for systemd"
     dependencies:
       runtime:
         - libudev
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - uses: split/dev
     test:
@@ -132,6 +144,9 @@ subpackages:
     description: "udev library"
     dependencies:
       provider-priority: 10
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
@@ -153,6 +168,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: libsystemd
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "libsystemd-shared"
     description: "systemd library"
@@ -165,6 +184,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: libsystemd-shared
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "systemd-boot-installed"
     description: "systemd bootloader (installed for EFI)"
@@ -190,12 +213,18 @@ subpackages:
         - if: ${{build.arch}} == 'x86_64'
           runs: |
             file /boot/efi/EFI/BOOT/BOOTX64.EFI | grep "executable for EFI"
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "systemd-boot"
     description: "systemd bootloader"
     dependencies:
       runtime:
         - libsystemd-shared
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/
@@ -222,8 +251,10 @@ subpackages:
     description: "Installable systemd-tests"
     dependencies:
       runtime:
+        - merged-sbin
         - systemd
         - systemd-container
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd
@@ -274,8 +305,10 @@ subpackages:
     description: "systemd container tools"
     dependencies:
       runtime:
-        - systemd
         - gnutar
+        - merged-sbin
+        - systemd
+        - wolfi-baselayout
     pipeline:
       - runs: |
           # Move machine, vm/nspawn, import, export and portable components
@@ -353,6 +386,8 @@ subpackages:
     dependencies:
       runtime:
         - libsystemd-shared
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd ${{targets.destdir}}/
@@ -386,11 +421,13 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
-        - tzdata
         - agetty
-        - mount
+        - agetty
         - kbd
-        - agetty
+        - merged-sbin
+        - mount
+        - tzdata
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/usr/bin
@@ -409,6 +446,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/systemd/network/
@@ -420,6 +459,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/system/
@@ -430,6 +471,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/systemd/system/
@@ -441,6 +484,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin/
@@ -462,6 +507,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/repart.d/
@@ -472,6 +519,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd ${{targets.destdir}}/
@@ -490,6 +539,8 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - merged-sbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd ${{targets.destdir}}/
