--- a/tini.yaml
+++ b/tini.yaml
@@ -1,7 +1,7 @@
 package:
   name: tini
   version: 0.19.0
-  epoch: 6
+  epoch: 20
   description: A tiny but valid init for containers
   copyright:
     - license: MIT
@@ -43,6 +43,10 @@ subpackages:
     pipeline:
       - runs: install -Dm755 build/tini-static ${{targets.subpkgdir}}/usr/bin/tini-static
     description: Static build of tini
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
