--- a/utmps.yaml
+++ b/utmps.yaml
@@ -1,10 +1,14 @@
 package:
   name: utmps
   version: 0.1.2.3
-  epoch: 2
+  epoch: 20
   description: A secure utmp/wtmp implementation
   copyright:
     - license: ISC
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -59,7 +63,9 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
+        - merged-sbin
         - utmps
+        - wolfi-baselayout
     description: utmps dev
 
   - name: utmps-docs
@@ -70,6 +76,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
