--- a/zfs.yaml
+++ b/zfs.yaml
@@ -2,10 +2,14 @@
 package:
   name: zfs
   version: "2.3.0"
-  epoch: 0
+  epoch: 20
   description: Advanced filesystem and volume manager
   copyright:
     - license: CDDL-1.0
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -69,6 +73,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: zfs-doc
     pipeline:
@@ -77,6 +85,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: zfs-udev
     pipeline:
@@ -84,6 +96,10 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/lib/udev
           mv ${{targets.destdir}}/lib/udev/* ${{targets.subpkgdir}}/lib/udev/
     description: zfs udev
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: zfs-scripts
     pipeline:
@@ -91,6 +107,10 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/share/zfs
           mv ${{targets.destdir}}/usr/share/zfs/* ${{targets.subpkgdir}}/usr/share/zfs/
     description: zfs scripts
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: zfs-utils-py
     pipeline:
@@ -101,6 +121,10 @@ subpackages:
               ${{targets.destdir}}/usr/bin/dbufstat \
               ${{targets.subpkgdir}}/usr/bin
     description: zfs utils
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
