--- a/liquibase-package-manager.yaml
+++ b/liquibase-package-manager.yaml
@@ -34,3 +34,23 @@ update:
   github:
     identifier: liquibase/liquibase-package-manager
     strip-prefix: v
+
+test:
+  environment:
+    contents:
+      packages:
+        - go
+        - curl
+  pipeline:
+    - uses: git-checkout
+      with:
+        repository: https://github.com/liquibase/liquibase-package-manager
+        tag: v${{package.version}}
+        expected-commit: 1cd39ecef00dee2b6cb800acd2d2410f06179231
+    - name: Install prereqs
+      runs: |
+        go install honnef.co/go/tools/cmd/staticcheck@latest
+    - name: Run test suite
+      runs: |
+        export PATH=$PATH:$(go env GOPATH)/bin
+        make test
