samba - usrmerge usr/sbin

--- a/samba.yaml
+++ b/samba.yaml
@@ -101,6 +101,17 @@ pipeline:
 
   - uses: strip
 
+  - runs: |
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba-gpupdate "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba_dnsupdate "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba_downgrade_db "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba_kcc "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba_spnupdate "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/samba_upgradedns "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
+
 subpackages:
   - name: samba-common
     description: Samba common files for both client an servers
@@ -251,9 +262,9 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.contextdir}}"/usr/lib/samba
-          mkdir -p "${{targets.contextdir}}"/usr/sbin
+          mkdir -p "${{targets.contextdir}}"/usr/bin
 
-          mv "${{targets.destdir}}"/usr/sbin/winbindd "${{targets.contextdir}}"/usr/sbin
+          mv "${{targets.destdir}}"/usr/sbin/winbindd "${{targets.contextdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/lib/samba/idmap "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/nss_info "${{targets.contextdir}}"/usr/lib/samba
 
@@ -322,13 +333,12 @@ subpackages:
     description: Samba server
     pipeline:
       - runs: |
-          mkdir -p "${{targets.contextdir}}"/usr/sbin
           mkdir -p "${{targets.contextdir}}"/usr/bin
           mkdir -p "${{targets.contextdir}}"/usr/lib/samba
 
-          mv "${{targets.destdir}}"/usr/sbin/nmbd "${{targets.contextdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/smbd "${{targets.contextdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/eventlogadm "${{targets.contextdir}}"/usr/sbin
+          mv "${{targets.destdir}}"/usr/sbin/nmbd "${{targets.contextdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/sbin/smbd "${{targets.contextdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/sbin/eventlogadm "${{targets.contextdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/smbstatus "${{targets.contextdir}}"/usr/bin
 
           mv "${{targets.destdir}}"/usr/lib/samba/auth "${{targets.contextdir}}"/usr/lib/samba
@@ -503,22 +513,22 @@ test:
         find /usr -name nmbd
     - name: "Check smbd Installation"
       runs: |
-        if [ -f /usr/sbin/smbd ]; then
-          echo "smbd found in /usr/sbin."
+        if [ -f /usr/bin/smbd ]; then
+          echo "smbd found in /usr/bin."
         else
-          echo "smbd could not be found in /usr/sbin!" && exit 1
+          echo "smbd could not be found in /usr/bin!" && exit 1
         fi
     - name: "Check nmbd Installation"
       runs: |
-        if [ -f /usr/sbin/nmbd ]; then
-          echo "nmbd found in /usr/sbin."
+        if [ -f /usr/bin/nmbd ]; then
+          echo "nmbd found in /usr/bin."
         else
-          echo "nmbd could not be found in /usr/sbin!" && exit 1
+          echo "nmbd could not be found in /usr/bin!" && exit 1
         fi
     - name: "Test smbd Version"
       runs: |
         export LD_LIBRARY_PATH=/usr/lib/samba:$LD_LIBRARY_PATH
-        /usr/sbin/smbd --version
+        /usr/bin/smbd --version
     - name: "Test smbd Service Start"
       runs: |
         TMP_CONF=$(mktemp)
