Add the pkgconf test to oath-toolkit

--- a/oath-toolkit.yaml
+++ b/oath-toolkit.yaml
@@ -56,6 +56,9 @@ subpackages:
       runtime:
         - ${{package.name}}
     description: ${{package.name}} dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-doc
     pipeline:
