--- a/oath-toolkit.yaml
+++ b/oath-toolkit.yaml
@@ -1,6 +1,7 @@
 package:
   name: oath-toolkit
   version: 2.6.12
+  epoch: 1
   description: "The OATH Toolkit provides components for building one-time password authentication systems"
   copyright:
     - license: GPL-3.0-or-later
