upgraded dependencies addressing cves

--- a/local-static-provisioner.yaml
+++ b/local-static-provisioner.yaml
@@ -29,15 +29,7 @@ pipeline:
 
   - uses: patch
     with:
-      patches: k8s-GHSA-27wf-5967-98gx-fix.patch
-
-  - uses: go/bump
-    with:
-      deps: |-
-        google.golang.org/protobuf@v1.35.2
-        golang.org/x/crypto@v0.31.0
-        golang.org/x/net@v0.33.0
-        k8s.io/kubernetes@v1.29.14
+      patches: upgrade-dependencies.patch
 
   - uses: go/build
     with:
