Add the pkgconf test to svt-av1 (#43729)

--- a/svt-av1.yaml
+++ b/svt-av1.yaml
@@ -1,7 +1,7 @@
 package:
   name: svt-av1
   version: 2.3.0
-  epoch: 0
+  epoch: 1
   description: "Scalable Video Technology for AV1 (SVT-AV1 Encoder)"
   copyright:
     - license: BSD-2-Clause
@@ -43,6 +43,9 @@ subpackages:
   - name: "${{package.name}}-dev"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
