--- a/libsdl2-ttf.yaml
+++ b/libsdl2-ttf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsdl2-ttf
   version: 2.24.0
-  epoch: 0
+  epoch: 1
   description: A library that allows you to use TrueType fonts in your SDL applications (Version 2)
   copyright:
     - license: Zlib
@@ -35,6 +35,9 @@ subpackages:
         - libsdl2-ttf
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
