xfsprogs - usrmerge usr/sbin

--- a/xfsprogs.yaml
+++ b/xfsprogs.yaml
@@ -35,17 +35,17 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: |
-        --sbindir=/usr/sbin \
+        --sbindir=/usr/bin \
         --enable-gettext=no
 
   - uses: autoconf/make
 
   - runs: |
-      make DIST_ROOT="${{targets.destdir}}" PKG_ROOT_SBIN_DIR="/usr/sbin" PKG_ROOT_LIB_DIR="/usr/lib64" install install-dev
+      make DIST_ROOT="${{targets.destdir}}" PKG_ROOT_SBIN_DIR="/usr/bin" PKG_ROOT_LIB_DIR="/usr/lib64" install install-dev
 
       find ${{targets.destdir}} -name '*.la' -print -exec rm \{} \;
 
-      chown -R root:root "${{targets.destdir}}"/*
+      chown -R root:root ${{targets.destdir}}/*
 
   - uses: strip
 
@@ -86,8 +86,8 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/share/xfsprogs
           mv "${{targets.destdir}}"/usr/share/xfsprogs/xfs_scrub* "${{targets.subpkgdir}}"/usr/share/xfsprogs/
 
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/xfs_scrub* "${{targets.subpkgdir}}"/usr/sbin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/xfs_scrub* "${{targets.subpkgdir}}"/usr/bin/
 
 update:
   enabled: true
