haproxy-3.1 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/haproxy-3.1.yaml
+++ b/haproxy-3.1.yaml
@@ -49,14 +49,10 @@ pipeline:
         USE_PROMEX=1 \
         LUA_LIB=/usr/lib/lua5.3 \
         LUA_INC=/usr/include/lua5.3 \
-        USE_GETADDRINFO=1 \
-        SBINDIR=/usr/bin
+        USE_GETADDRINFO=1
   - runs: |
-      make install DESTDIR="${{targets.destdir}}" PREFIX=/usr DOCDIR=/usr/share/doc/haproxy
+      make install DESTDIR="${{targets.destdir}}" PREFIX=/usr DOCDIR=/usr/share/doc/haproxy SBINDIR=/usr/bin
       install -d "${{targets.destdir}}"/var/lib/haproxy
-      mkdir -p "${{targets.destdir}}"/usr/bin
-      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
-      rmdir "${{targets.destdir}}"/usr/sbin
   - uses: strip
   # This MUST run after strip, which strips capabilities too!
   - runs: setcap cap_net_bind_service=+eip "${{targets.destdir}}/usr/bin/haproxy"
