glibc: fixup sbin path

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -82,6 +82,7 @@ pipeline:
       echo "rtlddir=/lib" >> configparms.base
       echo "slibdir=/lib" >> configparms.base
       echo "libdir=/usr/lib" >> configparms.base
+      echo "rootsbindir=/usr/bin" >> configparms.base
 
       echo "build-programs=no" > configparms
       cat configparms.base >> configparms
@@ -624,8 +625,8 @@ subpackages:
     description: "Staticly-linked symbolic link tool"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/sbin
-          mv "${{targets.destdir}}"/sbin/sln "${{targets.subpkgdir}}"/sbin
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/sln "${{targets.subpkgdir}}"/usr/bin
     test:
       pipeline:
         - runs: |
