--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -25,7 +25,7 @@ environment:
       - ncurses-dev
       - openssl-dev
       - perl
-      - pypy-bootstrap
+      - pypy-bootstrap=7.3.18
       - readline-dev
       - rpcgen
       - rsync
