feat: update pypy-3.10 and pypy-3.11 YAML files for pip installation improvements and dependency adjustments

--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -25,7 +25,7 @@ environment:
       - ncurses-dev
       - openssl-dev
       - perl
-      - pypy-bootstrap
+      - pypy-bootstrap=7.3.18
       - readline-dev
       - rpcgen
       - rsync
@@ -60,29 +60,35 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/usr/bin
       install -Dm755 pypy/goal/pypy${{vars.extracted-version}}-c "${{targets.contextdir}}"/usr/bin/pypy${{vars.extracted-version}}-c
       install -Dm755 pypy/goal/libpypy${{vars.extracted-version}}-c.so "${{targets.contextdir}}"/usr/bin/libpypy${{vars.extracted-version}}-c.so
-      install -Dm755 bin/pip3 "${{targets.contextdir}}"/usr/bin/pip3
 
       # # Install symlinks
       ln -s pypy${{vars.extracted-version}}-c  ${{targets.contextdir}}/usr/bin/pypy
+
+      rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
+      rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
+      rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+
+  - runs: |
+      ${{targets.contextdir}}/usr/bin/pypy${{vars.extracted-version}}-c -m ensurepip --default-pip
+      ${{targets.contextdir}}/usr/bin/pypy${{vars.extracted-version}}-c -m pip install --upgrade pip setuptools wheel
+      sed -i '1s|^#!.*|#!/usr/bin/pypy|' ${{targets.contextdir}}/usr/bin/pip3
+
+      # remove old pip and add symlink to new pip
+      rm -f ${{targets.contextdir}}/usr/bin/pip
       ln -s pip3 ${{targets.contextdir}}/usr/bin/pip
 
   - uses: strip
 
 subpackages:
-  - name: "${{package.name}}-dev"
-    description: "python3 development headers"
+  - name: ${{package.name}}-dev
+    description: PyPy 3.11 development files
     dependencies:
       runtime:
-        - ${{package.name}}=${{package.full-version}}
+        - ${{package.name}}
     pipeline:
       - runs: |
-          mkdir -p ${{targets.contextdir}}/usr/bin
-          mkdir -p ${{targets.contextdir}}/usr/lib/
-          rm -R lib-python/3/ensurepip/_bundled/
-
-          rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
-          rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
-          rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+          mkdir -p "{{targets.contextdir}}"/usr/include
+          mv "${{targets.destdir}}"/usr/include/pypy-3.11/pyconfig.h "${{targets.contextdir}}"/usr/include/
 
   - name: ${{package.name}}-compat
     description: PyPy 3.10 compatibility layer
@@ -92,7 +98,7 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/pypy/bin
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/usr/local/bin/pypy3
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/opt/pypy/bin/pypy3
-          ln -s /usr/bin/pip3 ${{targets.contextdir}}/opt/pypy/bin/pip3
+          ln -s /usr/bin/pip3 ${{targets.contextdir}}/opt/pypy/bin/pip
     test:
       environment:
         contents:
@@ -100,6 +106,7 @@ subpackages:
             - ${{package.name}}
       pipeline:
         - runs: stat /opt/pypy/bin/pypy3
+        - runs: stat /opt/pypy/bin/pip
         - runs: |
             export PATH=$PATH:/opt/pypy/bin
             pypy3 --version
@@ -114,6 +121,12 @@ test:
         expected_output: |
           PyPy ${{package.version}}
     - runs: pypy -c "import os, sys, math, random, datetime; print('Modules OK')"
+    - name: "check pip installation"
+      runs: pip --version
+    - name: "install and check package with pip"
+      runs: |
+        pip install requests
+        pypy -c "import requests; print(requests.__version__)"
     - runs: |
         cat <<EOF >test.py
         import time
