fix: remove specific version for pypy-bootstrap in YAML files for pypy-3.10 and pypy-3.11

--- a/pypy-3.11.yaml
+++ b/pypy-3.11.yaml
@@ -29,7 +29,7 @@ environment:
       - ncurses-dev
       - openssl-dev
       - perl
-      - pypy-bootstrap=7.3.18
+      - pypy-bootstrap
       - readline-dev
       - rpcgen
       - rsync
