Update dex.yaml modroot
Signed-off-by: Hector Fernandez <hector@chainguard.dev>

--- a/dex.yaml
+++ b/dex.yaml
@@ -33,6 +33,7 @@ pipeline:
     with:
       deps: |-
         github.com/go-jose/go-jose/v4@v4.0.5
+      modroot: dex
 
   - runs: |
       cd dex
