add bitnami compat pkg
Signed-off-by: Sanjay Kumar <sanjay.kumar@chainguard.dev>

--- a/flux-source-controller.yaml
+++ b/flux-source-controller.yaml
@@ -39,6 +39,25 @@ pipeline:
 
   - uses: strip
 
+subpackages:
+  - name: fluxcd-source-controller-bitnami-compat
+    description: "compat package with bitnami/flux image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: fluxcd-source-controller
+          version-path: 1/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/fluxcd-source-controller/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/source-controller ${{targets.subpkgdir}}/opt/bitnami/fluxcd-source-controller/bin/source-controller
+          cp LICENSE ${{targets.subpkgdir}}/opt/bitnami/licenses/LICENSE
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
+
 update:
   enabled: true
   ignore-regex-patterns:
