fix(build): Set CMake output directory to 'build' to resolve FileNotFoundError
The build process was failing because the pipeline defaulted to using the 'output' directory, while the upstream CMake build system expects artifacts in a 'build' directory. This mismatch caused a 'FileNotFoundError' when trying to locate files such as '/home/build/build/ssg-ol8-ds.xml'.

Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/scap-security-guide.yaml
+++ b/scap-security-guide.yaml
@@ -34,6 +34,7 @@ pipeline:
 
   - uses: cmake/configure
     with:
+      output-dir: build
       # TODO: RHEL# product suite is not compiling
       opts: |
         -DSSG_ANSIBLE_PLAYBOOKS_ENABLED=False \
@@ -45,8 +46,12 @@ pipeline:
         -DSSG_PRODUCT_RHEL9=False
 
   - uses: cmake/build
+    with:
+      output-dir: build
 
   - uses: cmake/install
+    with:
+      output-dir: build
 
   - uses: strip
 
