--- a/kyverno-1.13.yaml
+++ b/kyverno-1.13.yaml
@@ -1,7 +1,7 @@
 package:
   name: kyverno-1.13
   version: "1.13.4"
-  epoch: 0
+  epoch: 1
   description: Kubernetes Native Policy Management
   copyright:
     - license: Apache-2.0
@@ -42,7 +42,7 @@ pipeline:
   - uses: patch
     # This patch (ideally) can be removed when a new release is cut by the kyverno maintainers.
     with:
-      patches: update-otel-semconv-to-1.26.0.patch
+      patches: update-otel-semconv-to-1.26.0.patch disable-vet-printf-checks.patch
 
   - runs: |
       make build-all
