Symlink replaces are not working with apko, but do with apk-tools

--- a/wolfi-base.yaml
+++ b/wolfi-base.yaml
@@ -1,7 +1,7 @@
 package:
   name: wolfi-base
   version: 1
-  epoch: 7
+  epoch: 8
   description: "Wolfi base metapackage"
   copyright:
     - license: MIT
@@ -21,7 +21,29 @@ pipeline:
     runs: |
       mkdir -p "${{targets.destdir}}"
 
+subpackages:
+  - name: package-with-symlink
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/etc/
+          ln -s ../run/target1.conf ${{targets.contextdir}}/etc/some.conf
+
+  - name: package-with-symlink-replaces
+    dependencies:
+      runtime:
+        - package-with-symlink
+      replaces:
+        - package-with-symlink
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/etc/
+          ln -s ../run/target2.conf ${{targets.contextdir}}/etc/some.conf
+
 test:
+  environment:
+    contents:
+      packages:
+        - package-with-symlink-replaces
   pipeline:
     - name: "Commands exist"
       runs: |
