feat: update dependencies in pypy-3.10 and pypy-3.11 YAML files for version alignment

--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -6,6 +6,10 @@ package:
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - pypy3=3.10.999
+      - pypy-3=3.10.999
+  dependencies:
     runtime:
       - bzip2-dev
       - ncurses
