fix nested directory error
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -30,7 +30,7 @@ pipeline:
 
       for i in clean custom raw; do
         if [ -d "$i" ]; then
-          cp -r "$i"/* "${{targets.destdir}}"/opt/jsonnet/grafonnet/
+          cp -r "$i" "${{targets.destdir}}"/opt/jsonnet/grafonnet/
         fi
       done
 
