tests almost done
Signed-off-by: Michael Paul <31833332+MickeyPvX@users.noreply.github.com>

--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -60,6 +60,9 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/app
+          mkdir -p ${{targets.contextdir}}/opt/java
+
+          ln -sf ${JAVA_HOME} ${{targets.contextdir}}/opt/java/openjdk
           ln -sf /usr/share/java/${{package.name}}/${{package.name}}.jar ${{targets.contextdir}}/app/${{package.name}}.jar
     test:
       pipeline:
@@ -80,14 +83,26 @@ subpackages:
           ln -sf /usr/share/java/${{package.name}}/${{package.name}}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}.jar
     test:
       environment:
+        accounts:
+          users:
+            - username: bitnami
+              gid: 0
+              uid: 1001
+          run-as: 0
         contents:
           packages:
+            - ${{package.name}}
             - keycloak
             - openjdk-21-jre
             - wait-for-it
+            - sudo
         environment:
+          KEYCLOAK_ADMIN: admin
+          KEYCLOAK_ADMIN_PASSWORD: hunter2
+          KEYCLOAK_SSL_VERIFY: true
           PATH: "/opt/bitnami/java/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       pipeline:
+        - runs: stat /opt/bitnami/${{package.name}}/${{package.name}}.jar | grep "/usr/share/java/${{package.name}}/${{package.name}}.jar"
         - working-directory: /opt/bitnami/${{package.name}}
           runs: |
             # Start dev Keycloak to interact with
@@ -97,20 +112,39 @@ subpackages:
             wait-for-it localhost:8080 --timeout=60
 
             # Entrypoint from Bitnami image
-            java -jar ./${{package.name}}.jar
+            sudo su - bitnami
+            java -jar ./${{package.name}}.jar \
+              --keycloak.url=http://localhost:8080 \
+              --keycloak.ssl-verify=true \
+              --keycloak.user=${KEYCLOAK_ADMIN} \
+              --keycloak.password=${KEYCLOAK_ADMIN_PASSWORD} \
+              --import.files.locations=./moped.json
 
 test:
   environment:
+    accounts:
+      groups:
+        - groupname: nogroup
+          gid: 65534
+      users:
+        - username: nobody
+          gid: 65534
+          uid: 65534
+      run-as: 0
     contents:
       packages:
         - ${{package.name}}-compat
         - keycloak
         - openjdk-21-jre
         - wait-for-it
+        - sudo
     environment:
+      JAVA_HOME: /opt/java/openjdk
+      JAVA_OPTS: ""
       KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin123
-      JAVA_HOME: /usr/lib/jvm/java-21-openjdk
+      KEYCLOAK_ADMIN_PASSWORD: hunter2
+      KEYCLOAK_SSL_VERIFY: true
+      PATH: "/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   pipeline:
     - name: Startup ${{package.name}}
       runs: |
@@ -120,7 +154,7 @@ test:
         # Wait for keycloak to start
         wait-for-it localhost:8080 --timeout=60
 
-        exec /usr/lib/jvm/java-21-openjdk/bin/java -jar /app/${{package.name}}.jar \
+        exec java ${JAVA_OPTS} -jar /app/${{package.name}}.jar \
           --keycloak.url=http://localhost:8080 \
           --keycloak.ssl-verify=true \
           --keycloak.user=${KEYCLOAK_ADMIN} \
