--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -115,29 +115,18 @@ subpackages:
             sudo su - bitnami
             java -jar ./${{package.name}}.jar \
               --keycloak.url=http://localhost:8080 \
-              --keycloak.ssl-verify=true \
               --keycloak.user=${KEYCLOAK_ADMIN} \
               --keycloak.password=${KEYCLOAK_ADMIN_PASSWORD} \
-              --import.files.locations=./moped.json
+              --import.files.locations=/home/build/moped.json
 
 test:
   environment:
-    accounts:
-      groups:
-        - groupname: nogroup
-          gid: 65534
-      users:
-        - username: nobody
-          gid: 65534
-          uid: 65534
-      run-as: 0
     contents:
       packages:
         - ${{package.name}}-compat
         - keycloak
         - openjdk-21-jre
         - wait-for-it
-        - sudo
     environment:
       JAVA_HOME: /opt/java/openjdk
       JAVA_OPTS: ""
@@ -156,7 +145,6 @@ test:
 
         exec java ${JAVA_OPTS} -jar /app/${{package.name}}.jar \
           --keycloak.url=http://localhost:8080 \
-          --keycloak.ssl-verify=true \
           --keycloak.user=${KEYCLOAK_ADMIN} \
           --keycloak.password=${KEYCLOAK_ADMIN_PASSWORD} \
           --import.files.locations=./moped.json
@@ -164,7 +152,7 @@ test:
 update:
   enabled: true
   github:
-    identifier: adorsys/${{package.name}}
+    identifier: adorsys/keycloak-config-cli
     tag-filter: v
     use-tag: true
   ignore-regex-patterns:
