--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -153,6 +153,7 @@ update:
   enabled: true
   github:
     identifier: adorsys/keycloak-config-cli
+    strip-prefix: v
     tag-filter: v
     use-tag: true
   ignore-regex-patterns:
