--- a/otel-cli.yaml
+++ b/otel-cli.yaml
@@ -28,6 +28,11 @@ pipeline:
         -X main.date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
       output: otel-cli
 
+  - uses: go/bump
+    with:
+      deps: |-
+        golang.org/x/net@v0.33.0
+
 update:
   enabled: true
   github:
