fix: update symlink targets in pypy-3.10 and pypy-3.11 YAML files for consistency

--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -9,7 +9,6 @@ package:
     provides:
       - pypy3=3.10.999
       - pypy-3=3.10.999
-  dependencies:
     runtime:
       - bzip2-dev
       - ncurses
@@ -62,11 +61,11 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/usr/bin
-      install -Dm755 pypy/goal/pypy${{vars.extracted-version}}-c "${{targets.contextdir}}"/usr/bin/pypy${{vars.extracted-version}}-c
+      install -Dm755 pypy/goal/pypy${{vars.extracted-version}}-c "${{targets.contextdir}}"/usr/bin/pypy3
       install -Dm755 pypy/goal/libpypy${{vars.extracted-version}}-c.so "${{targets.contextdir}}"/usr/bin/libpypy${{vars.extracted-version}}-c.so
 
       # # Install symlinks
-      ln -s pypy${{vars.extracted-version}}-c  ${{targets.contextdir}}/usr/bin/pypy
+      ln -s pypy3  ${{targets.contextdir}}/usr/bin/pypy
 
       rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
       rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
@@ -93,6 +92,7 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/pypy/bin
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/usr/local/bin/pypy3
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/opt/pypy/bin/pypy3
+          ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/opt/pypy/bin/python
     test:
       environment:
         contents:
