feat(mysql-9.1): add bitnami-compat package

--- a/mysql-9.1.yaml
+++ b/mysql-9.1.yaml
@@ -1,7 +1,7 @@
 package:
   name: mysql-9.1
   version: 9.1.0
-  epoch: 1
+  epoch: 2
   description: "The MySQL open source relational database"
   copyright:
     - license: GPL-2.0-only # https://downloads.mysql.com/docs/licenses/mysqld-9.0-gpl-en.pdf
@@ -131,6 +131,59 @@ subpackages:
     dependencies:
       runtime:
         - "${{package.name}}-oci-entrypoint"
+
+  - name: ${{package.name}}-bitnami-compat
+    dependencies:
+      provides:
+        - mysql-bitnami-compat=${{package.full-version}}
+      runtime:
+        - bash
+        - busybox
+        - coreutils
+        - ini-file
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: mysql
+          # NOTE: 9.0 is the last version published by bitnami
+          version-path: 9.0/debian-12
+          commit: 2a237f1b8024064a5d1d9e92c7f3e06a79e3f44d
+      - name: Create symlinks
+        runs: |
+          mkdir -p "${{targets.contextdir}}/opt/bitnami/mysql/bin"
+          for file in mysql $(find "${{targets.destdir}}/usr/bin" -type f -exec basename {} \;) ; do
+            ln -sf /usr/bin/$file "${{targets.contextdir}}/opt/bitnami/mysql/bin/$file"
+          done
+
+          mkdir -p "${{targets.contextdir}}/opt/bitnami/mysql/lib"
+          ln -s /usr/lib/${{package.name}}/plugin "${{targets.contextdir}}/opt/bitnami/mysql/lib/plugin"
+          ln -s /usr/lib/private "${{targets.contextdir}}/opt/bitnami/mysql/lib/private"
+          ln -s /usr/share/${{package.name}} "${{targets.contextdir}}/opt/bitnami/mysql/share"
+
+          mkdir -p "${{targets.contextdir}}/usr/share/${{package.name}}"
+          ln -s /usr/share/${{package.name}} "${{targets.contextdir}}/usr/share/${{package.name}}/${{package.name}}"
+
+          mkdir -p "${{targets.contextdir}}/opt/bitnami/mysql/conf/bitnami"
+          install -m644 bitnami-my.cnf "${{targets.contextdir}}/opt/bitnami/mysql/conf/my.cnf"
+          cp -pfR "${{targets.contextdir}}/opt/bitnami/mysql/conf" "${{targets.contextdir}}/opt/bitnami/mysql/conf.default"
+
+          mkdir -p "${{targets.contextdir}}/opt/bitnami/mysql/logs"
+          ln -sf /proc/1/fd/1 "${{targets.contextdir}}/opt/bitnami/mysql/logs/mysqld.log"
+    test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
+      pipeline:
+        - runs: |
+            test -f /opt/bitnami/mysql/bin/mysql
+            test -f /opt/bitnami/mysql/bin/mysqladmin
+            test -f /opt/bitnami/mysql/bin/mysqld
+            test -f /opt/bitnami/mysql/conf/my.cnf
+            test -f /opt/bitnami/mysql/conf.default/my.cnf
+            test -f /opt/bitnami/mysql/lib/plugin/component_reference_cache.so
+            test -f /opt/bitnami/mysql/share/english/errmsg.sys
+            test -f /opt/bitnami/mysql/share/${{package.name}}/english/errmsg.sys
 
 update:
   enabled: true
