Resolve PR feedback
Signed-off-by: Matthew Ramirez <matthew.ramirez@chainguard.dev>

--- a/liquibase-package-manager.yaml
+++ b/liquibase-package-manager.yaml
@@ -22,8 +22,6 @@ pipeline:
       mkdir -p "${{targets.contextdir}}/bin"
       ln -sf /usr/bin/lpm ${{targets.contextdir}}/bin/lpm
 
-  - uses: strip
-
 update:
   enabled: true
   github:
@@ -36,16 +34,17 @@ test:
       packages:
         - go
         - curl
+        - git
   pipeline:
-    - uses: git-checkout
-      with:
-        repository: https://github.com/liquibase/liquibase-package-manager
-        tag: v${{package.version}}
-        expected-commit: 1cd39ecef00dee2b6cb800acd2d2410f06179231
-    - name: Install prereqs
-      runs: |
-        go install honnef.co/go/tools/cmd/staticcheck@latest
     - name: Run test suite
       runs: |
+        # Clone lpm repo for test suite access
+        git clone -b v${{package.version}} https://github.com/liquibase/liquibase-package-manager
+        cd ${{package.name}}
+
+        # Install prereqs
+        go install honnef.co/go/tools/cmd/staticcheck@latest
+
+        # Run test suite
         export PATH=$PATH:$(go env GOPATH)/bin
         make test
