--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -3,7 +3,7 @@ package:
   name: ingress-nginx-controller-1.12
   version: 1.12.0
   # There are manual changes to review between each package update. See 'vars:' section
-  epoch: 10
+  epoch: 11
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
     - license: Apache-2.0
@@ -57,6 +57,8 @@ var-transforms:
 
 environment:
   contents:
+    repositories:
+      - https://apk.cgr.dev/wolfi-presubmit/408643c270e2ec5d47c77820cc52c255be8f09f9
     packages:
       - abseil-cpp-dev
       - autoconf
