argo-rollouts versioned provides

--- a/argo-rollouts.yaml
+++ b/argo-rollouts.yaml
@@ -46,7 +46,7 @@ subpackages:
     dependencies:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       provides:
-        - kubectl-argo-rollouts-compat
+        - kubectl-argo-rollouts-compat=${{package.full-version}}
     pipeline:
       - uses: go/bump
         with:
