--- a/sftp.yaml
+++ b/sftp.yaml
@@ -10,7 +10,7 @@ package:
     runtime:
       - bash
       - openssh-client # Includes `sftp` command
-      - openssh-keygen
+      - openssh-keygen # used in entrypoint script
       - openssh-server-pam
       - openssh-sftp-server
       - posix-libc-utils # For `getent` command
@@ -40,6 +40,7 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/etc/ssh
       mkdir -p ${{targets.contextdir}}/usr/local/bin
       mkdir -p ${{targets.contextdir}}/usr/sbin
+      mkdir -p ${{targets.contextdir}}/var/run/sshd
 
       cp -av files/sshd_config ${{targets.contextdir}}/etc/ssh/sshd_config
       cp -av files/create-sftp-user ${{targets.contextdir}}/usr/local/bin/
@@ -55,17 +56,22 @@ test:
       packages:
         - wait-for-it
         - sshpass
+    accounts:
+      groups:
+        - groupname: users
+          gid: 100
+      run-as: 0 # entrypoint script needs root to run some commands like chown
   pipeline:
     - name: "Verify SFTP entrypoint"
       runs: |
-        groupadd users || true  # This creates the group if it doesn't exist
+        exit 1
         /entrypoint foo:pass:::upload & wait-for-it localhost:22
         netstat -tan | grep ':22'
 
         echo "test file" > /tmp/test.txt
         sshpass -p "pass" sftp -o StrictHostKeyChecking=no -P 22 foo@127.0.0.1 <<EOF
           put /tmp/test.txt upload/test.txt
-          ls upload/test.txt && echo "File uploaded successfully" ||  { echo "File upload failed"; exit 1; }
+          ls upload/test.txt
           exit
         EOF
 
