Changed test to run in dry run mode, added note about ssh key requirement

--- a/chainguard-source.yaml
+++ b/chainguard-source.yaml
@@ -47,4 +47,5 @@ test:
   pipeline:
     - runs: |
         chainguard-source --help
-        chainguard-source --yes --package hello-wolfi
+        # Running in dry-run mode because otherwise it requires proper ssh keys set up to git clone the repo
+        chainguard-source --yes --package hello-wolfi -d
