Add the pkgconf test to libva

--- a/libva.yaml
+++ b/libva.yaml
@@ -48,6 +48,10 @@ subpackages:
   - name: libva-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
+
     description: libva dev
 
 update:
