Add the pkgconf test to s-lang

--- a/s-lang.yaml
+++ b/s-lang.yaml
@@ -38,6 +38,9 @@ subpackages:
     description: headers for ${{package.name}}
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
     dependencies:
       runtime:
         - s-lang
